--- a/app/src/main/res/layout/ganador.xml
+++ b/app/src/main/res/layout/ganador.xml
@@ -1,99 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white"
-    android:padding="@dimen/dialog_body">
-
-
-    <TextView
-        android:id="@+id/info_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center"
+    >
+    <RelativeLayout
         android:gravity="center"
-        android:paddingBottom="@dimen/padding_between"
-        android:paddingTop="@dimen/padding_between"
-        android:text="hola"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <Button
-        android:id="@+id/crear_boton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/info_text"
-        android:layout_centerHorizontal="true"
-        android:paddingBottom="@dimen/button_padding"
-        android:paddingTop="@dimen/button_padding"
-        android:text="Crear"
-        android:textColor="@android:color/white" />
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/crear_boton"
-        android:layout_marginBottom="@dimen/padding_between"
-        android:layout_marginTop="@dimen/padding_between"
-        android:background="#C8C9CB" />
-
-    <EditText
-        android:id="@+id/nombre_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/divider"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/normal_padding"
-        android:ems="10"
-        android:hint="@string/nombre_input"
-        android:inputType="textPersonName"
-        android:padding="@dimen/edit_text_padding"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <EditText
-        android:id="@+id/contrasena_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/nombre_input"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/padding_between"
-        android:layout_marginTop="@dimen/normal_padding"
-        android:ems="10"
-        android:hint="Contraseña"
-        android:inputType="textPassword"
-        android:padding="@dimen/edit_text_padding"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <CheckBox
-        android:id="@+id/recordar_check"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/contrasena_input"
-        android:layout_alignStart="@+id/contrasena_input"
-        android:layout_below="@+id/contrasena_input"
-        android:checked="false"
-        android:text="recordar" />
+        android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/fotoGanador"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/pig1"
+            android:elevation="15dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="24dp"
+            />
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/badge"
+            android:id="@+id/imageView2"
+            android:layout_alignParentTop="true"
+            android:elevation="5dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="11dp" />
+    </RelativeLayout>
     <TextView
-        android:id="@+id/olvidar_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/contrasena_input"
-        android:layout_alignRight="@+id/contrasena_input"
-        android:layout_below="@+id/recordar_check"
-        android:paddingTop="@dimen/padding_between"
-        android:text="olvidar"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textSize="30sp"
+        android:textStyle="bold|italic"
+        android:textColor="@color/primary_text"
+        android:id="@+id/nombreGanador" />
 
     <Button
-        android:id="@+id/entrar_boton"
-        android:layout_width="match_parent"
+        android:id="@+id/revancha"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/button_padding"
-        android:paddingTop="@dimen/button_padding"
-        android:text="Entrar"
-        android:textColor="@android:color/white"
-        android:layout_below="@+id/olvidar_text"
-        android:layout_alignParentStart="true" />
-</RelativeLayout>
+        android:layout_marginTop="12dp"
+        android:background="@color/colorPrimary"
+        android:elevation="11dp"
+        android:text="¡Quiero la revancha!"
+        android:textAllCaps="false"
+        android:textStyle="bold|italic" />
+
+    <Button
+        android:id="@+id/salir"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="270dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp"
+        android:elevation="11dp"
+        android:text="Salir"
+        />
+</LinearLayout>
