--- a/app/src/main/res/layout/card_nombres.xml
+++ b/app/src/main/res/layout/card_nombres.xml
@@ -12,8 +12,15 @@
             android:layout_margin="3dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
             />
+
+        <ImageView
+            android:id="@+id/editarNombre"
+            android:layout_gravity="end|center_vertical"
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@android:drawable/ic_menu_edit" />
 
 
 </android.support.v7.widget.CardView>
