--- a/app/src/main/res/layout/activity_partida.xml
+++ b/app/src/main/res/layout/activity_partida.xml
@@ -9,10 +9,17 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:background="?attr/colorPrimary"
             android:minHeight="32dp"
-            android:theme="?attr/actionBarTheme" />
+            android:theme="?attr/actionBarTheme">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    />
+
+        </android.support.v7.widget.Toolbar>
 
         <android.support.v7.widget.RecyclerView
             android:layout_below="@+id/toolbar2"
