--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="button_padding">8dp</dimen>
     <dimen name="normal_padding">8dp</dimen>
     <dimen name="edit_text_padding">8dp</dimen>
+    <dimen name="titulo">35dp</dimen>
+    <dimen name="parrafos">17dp</dimen>
 </resources>
