--- a/app/src/main/res/layout/activity_como_jugar.xml
+++ b/app/src/main/res/layout/activity_como_jugar.xml
@@ -6,32 +6,54 @@
     tools:context="com.example.luciano.chanchuno.comoJugar"
     android:orientation="vertical">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tituloComoJugar"
-        android:textAlignment="center"
-        android:textSize="@dimen/titulo"
-        android:padding="5px"/>
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/cartas"
+            android:layout_alignStart="@+id/tituloComoJugar"
+            android:layout_centerVertical="true"
+            android:alpha="0.3"/>
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/cartas"
+            android:layout_centerVertical="true"
+            android:layout_alignEnd="@+id/tituloComoJugar"
+            android:alpha="0.3"/>
+        <TextView
+            android:id="@+id/tituloComoJugar"
+            android:layout_margin="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tituloComoJugar"
+            android:textAlignment="center"
+            android:textSize="@dimen/titulo"/>
+    </RelativeLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/comoJugarUno"
                 android:textSize="@dimen/parrafos"
-                android:padding="30px"/>
+                android:padding="15dp"/>
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="30px"
+                android:padding="15dp"
                 android:text="@string/comoJugarDos"
                 android:textSize="@dimen/parrafos" />
 
@@ -40,13 +62,13 @@
                 android:layout_height="wrap_content"
                 android:text="@string/comoJugarTres"
                 android:textSize="@dimen/parrafos"
-                android:padding="30px"/>
+                android:padding="15dp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/comoJugarPuntos"
                 android:textSize="@dimen/parrafos"
-                android:padding="30px"/>
+                android:padding="15dp"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
