--- a/app/src/main/res/layout/loadscreen.xml
+++ b/app/src/main/res/layout/loadscreen.xml
@@ -2,11 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#bbd3ec">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@drawable/chanchocool" />
+        android:scaleType="centerInside"
+        android:src="@drawable/logo" />
+
 </RelativeLayout>
