--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,4 @@
 <resources>
-
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -14,7 +12,7 @@
     </style>
 
     <style name="MenuTextStyle"
-        parent="style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textColor">#535353</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textSize">16sp</item>
