--- a/app/src/main/res/layout/editar_nombre.xml
+++ b/app/src/main/res/layout/editar_nombre.xml
@@ -33,7 +33,8 @@
             android:layout_height="wrap_content"
             style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
             android:layout_weight="1"
-            android:text="Cambiar" />
+            android:text="Cambiar"
+            android:enabled="false"/>
 
         <Button
             android:id="@+id/btnCancelarCambiarNombre"
