--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,11 @@
         android:alwaysDrawnWithCache="true"
         android:background="?attr/colorPrimary"
         android:elevation="11dp"
-        android:theme="?attr/actionBarTheme">
+        android:theme="?attr/actionBarTheme" tools:targetApi="lollipop">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="¿Quienes juegan?"
+                android:text="@string/quienes_juegan"
                 android:textSize="20sp"
                 android:textAlignment="center"/>
         </android.support.v7.widget.Toolbar>
@@ -35,7 +35,7 @@
         android:maxLines="1"
         android:textSize="20sp"
         android:layout_below="@id/toolbar"
-        />
+        android:importantForAutofill="no" />
 
     <Button
         android:id="@+id/btnAgregar"
@@ -55,12 +55,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="15dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginRight="20dp"
         android:clickable="true"
         android:onClick="iniciarPartida"
         app:elevation="12dp"
         app:fabSize="normal"
-        app:srcCompat="@android:drawable/ic_menu_myplaces" />
+        app:srcCompat="@android:drawable/ic_menu_myplaces"
+        android:elevation="3dp"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/contenedor"
@@ -69,5 +71,16 @@
         android:layout_below="@id/btnAgregar"
         android:layout_margin="5dp"
         />
+
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6353529381545594/6925206786">
+    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
