--- a/app/src/main/res/layout/activity_partida.xml
+++ b/app/src/main/res/layout/activity_partida.xml
@@ -6,6 +6,8 @@
     tools:context="com.example.luciano.chanchuno.partida"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar2"
             android:layout_width="match_parent"
@@ -22,15 +24,22 @@
         </android.support.v7.widget.Toolbar>
 
         <ListView
-            android:layout_below="@+id/toolbar2"
-            android:layout_width="match_parent"
             android:id="@+id/lv_partida"
-            android:layout_height="match_parent" />
+            android:layout_width="match_parent"
+            android:layout_height="617dp"
+            android:layout_above="@+id/ad_partida"
+            android:layout_below="@+id/toolbar2"
+            android:layout_marginTop="-30dp"
+            android:layout_marginBottom="0dp" />
 
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:layout_below="@+id/toolbar2"-->
-            <!--android:id="@+id/rvPartida"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"/>-->
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/ad_partida"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="0dp"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-6353529381545594/6925206786" />
 
 </RelativeLayout>
