--- a/chanchuno/src/main/res/layout/activity_main.xml
+++ b/chanchuno/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:alwaysDrawnWithCache="true"
         android:background="?attr/colorPrimary"
         android:elevation="11dp"
-        android:theme="?attr/actionBarTheme" tools:targetApi="lollipop">
+        android:theme="?attr/actionBarTheme" >
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -54,10 +54,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="50dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:clickable="true"
+        android:contentDescription="@string/iniciodepartida"
+        android:focusable="true"
         android:onClick="iniciarPartida"
         app:elevation="12dp"
         app:fabSize="normal"
