--- a/chanchuno/src/main/res/layout-v21/activity_main.xml
+++ b/chanchuno/src/main/res/layout-v21/activity_main.xml
@@ -53,14 +53,14 @@
         android:id="@+id/floatingActionButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="50dp"
         android:clickable="true"
-        android:contentDescription="inicioDePartida"
+        android:contentDescription="@string/iniciodepartida"
         android:elevation="3dp"
-        android:focusable="auto"
+        android:focusable="true"
         android:onClick="iniciarPartida"
         app:elevation="12dp"
         app:fabSize="normal"
